# MediSimpleGPT

./: .env.example  .gitignore  DOCUMENTATION.md  Makefile  README.md
backend/: .gitignore  api_server.py  prompts.json  pyproject.toml  server.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/hooks/: useAgent.ts
