[project]
name = "dom-handler"
version = "0.1.0"
description = "AI agent for autonomous website interaction via CDP"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.0.2",
    "mcp[cli]>=1.26.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "playwright>=1.48.0",
    "ollama>=0.4.0",
    "aiosqlite>=0.20.0",
]
